# gener8bot

./: Cargo.toml  LICENSE.txt  MakeFile  readme.md
.github/workflows/: rust.yml
src/: auction_product.rs  main.rs  me.rs  product.rs  settings.rs  snipe.rs
